Fixing menu to expand/collapse for environments

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -155,6 +155,9 @@ $textarea-transition-time: 0.6s
 		margin: 0
 		overflow: hidden
 
+		ul a
+			padding-left: 64px
+
 		a
 			opacity: .8
 			padding-left: 54px
